--- a/css/profile.css
+++ b/css/profile.css
@@ -1,15 +1,15 @@
-html {
+/*html {
   box-sizing: border-box;
 }
 
 *, *:before, *:after {
   box-sizing: inherit;
-}
+}*/
 
 body {
   height: 100%;
   margin: 0;
-  background-color: yellow;
+  background-color: papayawhip;
 }
 
 h1 {
@@ -35,9 +35,130 @@ section {
 }
 
 .favorites {
-  background-color: papayawhip;
+  background-color: tomato;
 }
 
 .history {
-  background-color: blue;
+  background-color: cornflowerblue;
+}
+
+/*** EDIT FORM MODAL ***/
+
+.edit-form-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  z-index: 1000;
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+
+.edit-form-modal:target {
+  opacity: 0.9;
+  pointer-events: auto;
+}
+
+.close-it {
+  position: fixed;
+  top: 32px;
+  right: 32px;
+  display: block;
+  width: 42px;
+  height: 42px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  background: url(../images/close.png) no-repeat;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  background-size: 100%;
+}
+
+.close-it:hover {
+  background-position: 0px -42px;
+}
+
+/*** EDIT FORM ***/
+
+#edit-form {
+  margin:20% auto 0 auto;
+  padding: 20px;
+  width: 545px;
+  height: auto;
+  overflow: hidden;
+  background: ;
+}
+
+#edit-form .input-group,
+#edit-form input, 
+#edit-form label {
+  display: inline-block;
+}
+
+#edit-form .input-group {
+  position: relative;
+  margin: 10px 0;
+}
+
+#edit-form input,
+#edit-form label {
+  margin-right: 20px;
+  padding: 20px 0;
+  width: 250px;
+  font-family: georgia;
+  font-size: 18px;
+}
+
+#edit-form input {
+  outline: none;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid tomato;
+  color: gray;
+}
+
+#edit-form button {
+  padding: 10px;
+  width: 525px;
+  border: 2px solid tomato;
+  background: transparent;
+  color: tomato;
+  cursor: pointer;
+  font-family: tahoma;
+  font-size: 14px;
+}
+
+#edit-form button:hover {
+  background: tomato;
+  color: white;
+}
+
+#edit-form label {
+  position: absolute;
+  top: 30%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -30%);
+  pointer-events: none;
+  font-style: italic;
+  color: #bbb;
+  -webkit-transition: .2s ease all;
+  transition: .2s ease all;
+}
+
+#edit-form input:focus {
+  border-color: lightgray;
+}
+
+#edit-form input:focus ~ label,
+#edit-form input:valid ~ label {
+  top: 0;
+  font-size: 12px;
+  color: tomato;
 }
