--- a/css/index.css
+++ b/css/index.css
@@ -1,41 +1,72 @@
 body {
   height: 100%;
   margin: 0;
-  background-color: papayawhip;
   font-family: georgia;
 }
 
-.wrapper {
-
-  margin: 0 auto;
-}
-
 a.btn {
-  border: 2px solid tomato;
+/*  border: 2px solid #fff;*/
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  padding: 5px 10px;
+  padding: 10px 20px;
+  margin: 0px 10px;
   text-decoration: none;
-  font-size: 24px;
-  background: tomato;
+  font-size: 32px;
+  background: rgba(255,255,255,0.3);
   color: #fff;
-  font-family: tahoma;
+  font-family: Helvetica, sans serif;
 }
 
 a.btn:hover {
   background: tomato;
 }
 
+video.background-video {
+  min-height: 92vh;
+  min-width: 100%;
+  opacity: .5;
+  z-index: -100;
+}
+
+#main {
+  position: absolute;
+  top: 0;
+  height: 92vh;
+  width: 100vw;
+}
+
+.content {
+  position: relative;
+  top: -70%;
+  display: block;
+  text-align: center;
+  color: #fff;
+}
+
+.content:before {
+  position: absolute;
+  right: 0;
+  left: 0;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+.tagline {
+  padding-bottom: 20px;
+}
+
 #about-btn {
-  background: mediumaquamarine;
+  background: rgb(245, 22, 0);
   box-shadow: inset 0 3px 0 rgba(0,0,0,.1);
   bottom: 0;
   color: #fff;
   cursor: pointer;
-  height: 45px;
+  height: 8vh;
   left: 0;
-  line-height: 45px;
+  line-height: 8vh;
   position: absolute;
   text-align: center;
   width: 100%;
@@ -47,6 +78,10 @@ a.btn:hover {
 
 #how-it-works {
   
+}
+
+li {
+  color: #fff;
 }
 
 footer {
@@ -65,10 +100,13 @@ img {
 
 .login-form-modal,
 .signup-form-modal {
-  position: fixed;
+  position: absolute;
+  display: block;
   top: 0;
-  right: 0;
-  bottom: 0;
+/*  right: 0;
+  bottom: 0;*/
+  height: 100%;
+  width: 100%;
   left: 0;
   background: rgba(0,0,0,0.8);
   z-index: 1000;
