--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,11 @@ body {
   height: 100%;
   margin: 0;
   font-family: georgia;
+  background: url(https://farm8.staticflickr.com/7476/16157551378_f05d6fbfc4_b.jpg) no-repeat;
+  background-size: cover;
 }
 
 a.btn {
-/*  border: 2px solid #fff;*/
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -13,20 +14,9 @@ a.btn {
   margin: 0px 10px;
   text-decoration: none;
   font-size: 32px;
-  background: rgba(255,255,255,0.3);
+  background: rgba(255,255,255,0.5);
   color: #fff;
   font-family: Helvetica, sans serif;
-}
-
-a.btn:hover {
-  background: tomato;
-}
-
-video.background-video {
-  min-height: 92vh;
-  min-width: 100%;
-  opacity: .5;
-  z-index: -100;
 }
 
 #main {
@@ -38,32 +28,45 @@ video.background-video {
 
 .content {
   position: relative;
-  top: -70%;
+  top: 22%;
   display: block;
   text-align: center;
   color: #fff;
-}
-
-.content:before {
-  position: absolute;
-  right: 0;
-  left: 0;
+  z-index: 100;
 }
 
 h1 {
   font-size: 36px;
+  margin-bottom: 0;
+}
+
+h2 {
+  margin: 0 auto;
+  color: #fff;
+  border-bottom: 2px solid rgb(245, 22, 0);
+  width: 165px;
 }
 
 .tagline {
-  padding-bottom: 20px;
+  margin-bottom: 60px;
 }
 
-#about-btn {
+.how-it-works {
+  display: block;
+  padding-top: 50px;
+  color: #fff;
+}
+
+li {
+  color: #fff;
+  padding-bottom: 10px;
+}
+
+footer {
   background: rgb(245, 22, 0);
   box-shadow: inset 0 3px 0 rgba(0,0,0,.1);
   bottom: 0;
   color: #fff;
-  cursor: pointer;
   height: 8vh;
   left: 0;
   line-height: 8vh;
@@ -71,25 +74,9 @@ h1 {
   text-align: center;
   width: 100%;
   z-index: 10;
-  -webkit-transition:bottom .3s ease-out 1.7s;
-  -moz-transition:bottom .3s ease-out 1.7s;
-  transition:bottom .3s ease-out 1.7s;
-}
-
-#how-it-works {
-  
-}
-
-li {
-  color: #fff;
-}
-
-footer {
-  margin: 0 auto;
-  padding: 5px;
-  position: absolute;
-  bottom: 0;
-  font-size: 12px;
+/*  -webkit-transition:bottom .3s ease-in-out 1.7s;
+  -moz-transition:bottom .3s ease-in-out 1.7s;
+  transition:bottom .3s ease-in-out 1.7s;*/
 }
 
 img {
@@ -99,7 +86,8 @@ img {
 /*** LOGIN/SIGNUP FORM MODALS ***/
 
 .login-form-modal,
-.signup-form-modal {
+.signup-form-modal,
+.info-modal {
   position: absolute;
   display: block;
   top: 0;
@@ -108,7 +96,7 @@ img {
   height: 100%;
   width: 100%;
   left: 0;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,1);
   z-index: 1000;
   opacity: 0;
   -webkit-transition: opacity 400ms ease-in;
@@ -118,7 +106,8 @@ img {
 }
 
 .login-form-modal:target,
-.signup-form-modal:target {
+.signup-form-modal:target,
+.info-modal:target {
   opacity: 0.9;
   pointer-events: auto;
 }
@@ -145,14 +134,21 @@ img {
 
 /*** LOGIN/SIGNUP FORM STYLE ***/
 
-#login-form,
+#login-form {
+  margin:15% auto 0 auto;
+  padding: 20px;
+  width: 235px;
+  height: auto;
+  overflow: hidden;
+}
+
+#info,
 #signup-form {
   margin:20% auto 0 auto;
   padding: 20px;
   width: 545px;
   height: auto;
   overflow: hidden;
-  background: ;
 }
 
 #login-form .input-group,
@@ -186,25 +182,32 @@ img {
   outline: none;
   background: transparent;
   border: none;
-  border-bottom: 2px solid tomato;
+  border-bottom: 2px solid rgb(245, 22, 0);
   color: gray;
 }
 
-#login-form button,
+#login-form button {
+  width: 250px;
+}
+
+#login-form button, 
 #signup-form button {
   padding: 10px;
-  width: 525px;
-  border: 2px solid tomato;
+  border: 2px solid rgb(245, 22, 0);
   background: transparent;
-  color: tomato;
+  color: rgb(245, 22, 0);
   cursor: pointer;
   font-family: tahoma;
   font-size: 14px;
 }
 
+#signup-form button {
+  width: 525px;
+}
+
 #login-form button:hover,
 #signup-form button:hover {
-  background: tomato;
+  background: rgb(245, 22, 0);
   color: white;
 }
 
@@ -233,5 +236,5 @@ img {
 #signup-form input:valid ~ label {
   top: 0;
   font-size: 12px;
-  color: tomato;
+  color: rgb(245, 22, 0);
 }
