--- a/css/profile.css
+++ b/css/profile.css
@@ -1,23 +1,23 @@
-/*html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}*/
-
 body {
   height: 100%;
   margin: 0;
-  background-color: papayawhip;
+}
+
+header {
+  position: relative;
 }
 
 h1 {
+  position: relative;
   float: left;
 }
 
-header < nav {
-  vertical-align: bottom;
+nav {
+  top: 2.5em;
+  margin-bottom: 2.5em;
+  float: right;
+  overflow: hidden;
+  vertical-align: middle;
 }
 
 section {
@@ -29,15 +29,16 @@ section {
 }
 
 .user {
-  background-color: #eeeeee;
+  border-bottom: 1px solid #000;
 }
 
 .favorites {
-  background-color: tomato;
+  border-bottom: 1px solid #000;
+
 }
 
 .history {
-  background-color: cornflowerblue;
+
 }
 
 .favorites < ul, .history < ul {
@@ -54,7 +55,7 @@ section {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.9);
   z-index: 1000;
   opacity: 0;
   -webkit-transition: opacity 400ms ease-in;
@@ -123,23 +124,23 @@ section {
   outline: none;
   background: transparent;
   border: none;
-  border-bottom: 2px solid tomato;
+  border-bottom: 2px solid rgb(245, 22, 0);
   color: gray;
 }
 
 #edit-form button {
   padding: 10px;
   width: 525px;
-  border: 2px solid tomato;
+  border: 2px solid rgb(245, 22, 0);
   background: transparent;
-  color: tomato;
+  color: rgb(245, 22, 0);
   cursor: pointer;
   font-family: tahoma;
   font-size: 14px;
 }
 
 #edit-form button:hover {
-  background: tomato;
+  background: rgb(245, 22, 0);
   color: white;
 }
 
@@ -164,5 +165,5 @@ section {
 #edit-form input:valid ~ label {
   top: 0;
   font-size: 12px;
-  color: tomato;
+  color: rgb(245, 22, 0);
 }
