--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 .selection {
+	padding-top: 210px;
 	background-color: black;
 	height: 100%;
 	overflow-y: hidden;	
 	text-align: center;
 	opacity: 0.5;
 	color: white;
-	padding-top: 10px;
+	font-style; Lato;
+	font-size: 25px;
+
 }
 
 html, body {
+	font-style: Lato;
 	text-align: center;
 	margin: 0;
 	width: 100%;
@@ -24,13 +28,15 @@ html, body {
 }
 
 .result {
+	font-style: Lato;
+	padding-top: 40px;
 	color: black;
-	padding-top: 10px;
 	/*text-align: center;*/
 	
 	}
 .a {
-  padding-top: 10px;
+	padding-top: 10px;
+  
 
 }
 
@@ -44,4 +50,5 @@ html, body {
 	padding-bottom: 24px;
 */
 	/*background-color: white;*/
+
 }
